devops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudlink
  labels:
    app.kubernetes.io/name: cloudlink
    app.kubernetes.io/part-of: url-shortener
